--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "cbtypewriter": "^0.3.2",
     "connected-react-router": "^6.8.0",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
